--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   traefik:
-    image: traefik:v2.3.1
+    image: traefik:2.4.13
     restart: always
     ports:
       - 80:80
